# stockrs

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  data.rs  indicator.rs  main.rs  utils.rs
src/cli/: backtest.rs  data.rs  indicator.rs  mod.rs  portfolio.rs  quote.rs  selfupdate.rs  strategy.rs  strategy_template.rhai
src/data/: benchmark.rs  eastmoney.rs  fundamental.rs  hk.rs  mod.rs  models.rs  sina.rs  source.rs  store.rs  tencent.rs
src/engine/: backtest.rs  context.rs  metrics.rs  mod.rs  portfolio.rs  position.rs  rules.rs
src/indicator/: boll.rs  kdj.rs  ma.rs  macd.rs  rsi.rs
src/strategy/: mod.rs  rhai_engine.rs
src/utils/: date.rs  format.rs
strategies/: momentum_rotation.rhai  oversold_boll.rhai  rsi_oversold.rhai  sma_cross.rhai  sma_cross_param.rhai  sma_stop.rhai  value_momentum.rhai  value_sma.rhai  vol_breakout.rhai
