[package]
name = "stockrs"
version = "0.1.0"
edition = "2021"
description = "轻量 A 股量化 CLI 工具"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
comfy-table = "7"
chrono = "0.4"
rhai = { version = "1.19", features = ["sync"] }
directories = "5"
async-trait = "0.1"
encoding_rs = "0.8"
self_update = { version = "0.44.0", default-features = false, features = ["reqwest", "rustls", "archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }

[profile.release]
opt-level = "z"     # 优化体积
lto = true          # 链接期优化，跨 crate 内联与死代码消除
codegen-units = 1   # 单编译单元，利于 LTO 裁剪
panic = "abort"     # 去掉 unwind 表
strip = true        # 去符号
